Add navigable Phase 1 screen stubs and gallery previews
Give every planned Lattice screen a Graphite Lattice visual stub, add an
All Screens gallery, and a ScreenExport utility so Home, New Game, Game
Board, Match Complete, Match Analysis, and AI Lab can be reviewed together.

Co-authored-by: James Rallis <jrallis988@users.noreply.github.com>